[package]
name = "envlint"
version = "0.1.0"
edition = "2021"
rust-version = "1.74"
description = "Schema-driven validator and linter for environment variables and .env files."
license = "MIT"
repository = "https://github.com/slothlabsorg/envlint"
homepage = "https://github.com/slothlabsorg/envlint"
documentation = "https://docs.rs/envlint"
readme = "README.md"
keywords = ["env", "dotenv", "config", "validation", "devops"]
categories = ["config", "command-line-utilities", "development-tools"]
exclude = [".github/*"]

[lib]
name = "envlint"
path = "src/lib.rs"

[[bin]]
name = "envlint"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
regex = "1"

[profile.release]
strip = true
lto = true
codegen-units = 1
